tests/baselines/reference/nodeModulesImportAttributesModeDeclarationEmitErrors(module=node16).errors.txt
/index.ts(2,45): error TS2856: Import attributes cannot be used with type-only imports or exports.
/index.ts(2,71): error TS1453: `resolution-mode` should be either `require` or `import`.
/index.ts(4,10): error TS2305: Module '"pkg"' has no exported member 'ImportInterface'.
/index.ts(4,39): error TS2856: Import attributes cannot be used with type-only imports or exports.
/index.ts(6,76): error TS2856: Import attributes cannot be used with type-only imports or exports.


==== /index.ts (5 errors) ====
    // incorrect mode
    import type { RequireInterface } from "pkg" with { "resolution-mode": "foobar" };
                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
                                                                          ~~~~~~~~
!!! error TS1453: `resolution-mode` should be either `require` or `import`.
    // not type-only
    import { ImportInterface } from "pkg" with { "resolution-mode": "import" };
             ~~~~~~~~~~~~~~~
!!! error TS2305: Module '"pkg"' has no exported member 'ImportInterface'.
                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    // not exclusively type-only
    import {type RequireInterface as Req, RequireInterface as Req2} from "pkg" with { "resolution-mode": "require" };
                                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    
    export interface LocalInterface extends RequireInterface, ImportInterface {}
    
    
    
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}